--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body{
 
 h2{
     margin: 0;
+    text-align: center;
 }
 
 ul{
@@ -56,4 +57,9 @@ button{
 
 button:hover{
     background-color: rgb(37, 70, 141);
+}
+
+button:focus{
+    background-color: rgb(33, 9, 94);
+    outline: none;
 }
